fix X icon on mobile

--- a/client/src/components/SearchForm/TimeInput/media.css
+++ b/client/src/components/SearchForm/TimeInput/media.css
@@ -24,13 +24,27 @@
     left: 84px !important;
     top: 200px !important;
   }
-  .selected__time {
-    display: inline-block;
+  .selected__time-box {
+    display: none;
+  }
+  .date__header-box {
+    display: flex;
     width: 100%;
-    padding: 1.5rem 1rem;
-    border-bottom: 1px solid rgba(51, 51, 51, 0.2);
+    height: 80px;
+    align-items: center;
+    border-bottom: 0.6px solid rgba(51, 51, 51, 0.7);
+    margin-bottom: 1rem;
+  }
+  .date__header {
+    width: 50%;
+  }
+  .date__header.right {
+    text-align: right;
     font-size: 16px;
-    color: rgba(51, 51, 51, 0.6);
+    padding-right: 8%;
+  }
+  .date__header.left {
+    padding-left: 5%;
   }
   .picker:hover.picker:after {
     color: rgba(0, 0, 0, 0.65) !important;
@@ -92,3 +106,4 @@
     padding: 0 !important;
   }
 }
+
